ollama/ollama.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    environment: production
    team: onemanband
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deploy
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      nodeName: NODENAME
      containers:
      - name: ollama
        image: ollama/ollama:latest
        volumeMounts:
          - mountPath: /root/.ollama
            name: ollama-storage
        ports:
        - name: container-port
          containerPort: 11434
          protocol: TCP
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "for model in $PRELOAD_MODELS; do ollama run $model \"\"; done"]
      volumes:
      - hostPath:
          path: /opt/ollama
          type: DirectoryOrCreate
        name: ollama-storage
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-svc
  namespace: ollama
spec:
  type: ClusterIP
  selector:
    name: ollama
  ports:
  - port: 80
    name: http
    targetPort: container-port
    protocol: TCP
