ollama/webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deploy
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webui
  template:
    metadata:
      labels:
        name: webui
    spec:
      volumes:
      - hostPath:
          path: /opt/webui
          type: DirectoryOrCreate
        name: webui-storage
      nodeName: NODENAME
      containers:
        - name: webui
          image: ghcr.io/open-webui/open-webui:latest
          volumeMounts:
          - mountPath: /app/backend/data
            name: webui-storage
          ports:
            - name: container-port
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webui-svc
  namespace: ollama
spec:
  type: ClusterIP
  selector:
    name: webui
  ports:
  - port: 80
    name: http
    targetPort: container-port
    protocol: TCP
  - port: 443
    name: https
    targetPort: container-port
    protocol: TCP
