ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-redirect-from: http://
    nginx.ingress.kubernetes.io/proxy-redirect-to: https://
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "300"
  name: webui-ingress
  namespace: ollama
spec:
  ingressClassName: nginx
  rules:
  - host: webui.kubernetes
    http:
      paths:
      - backend:
          service:
            name: webui-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - webui.kubernetes
    secretName: webui-secret
